<resources>
    <string name="app_name">Pogodynka</string>
    <string name="prognoza_pogody">Prognoza pogody</string>
    <string name="dane_meteo">Aktualne warunki</string>
    <string name="ustawienia">Ustawienia aplikacji</string>
    <string name="miasto_btn">Szukaj miasta</string>
    <string name="godzina">Godzina</string>
    <string name="temperatura">Temperatura</string>
    <string name="wiatr">Wiatr</string>
    <string name="miejscowosc">Miejscowość</string>
    <string name="czas_wykonania_pomiaru">Czas wykonania pomiaru</string>
    <string name="loading">Ładowanie danych ...</string>
    <string name="preasure">Ciśnienie</string>
</resources>