<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tabela_pogoda"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/labelCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/miejscowosc" />

            <TextView
                android:id="@+id/cityValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/labelDateTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/czas_wykonania_pomiaru" />

            <TextView
                android:id="@+id/dateTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/labelTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperatura" />

            <TextView
                android:id="@+id/tempValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/labelPreasure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preasure" />

            <TextView
                android:id="@+id/preasureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loading" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>