<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title_mainpage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="48sp" />

        <AutoCompleteTextView
            android:id="@+id/Miasto_input"
            android:hint="Input"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="Koszalin" />

        <Button
            android:id="@+id/button_prognozaPogody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prognoza_pogody" />

        <Button
            android:id="@+id/button_aktualne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dane_meteo" />

        <Button
            android:id="@+id/button_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ustawienia" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>