<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Nag_prognoza"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prognoza_pogody"
            android:textAlignment="center"
            android:textColor="#F44336"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <TableLayout
                android:id="@+id/tabela_prognozy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">
                <TableRow
                    android:id="@+id/row1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="UselessParent">

                    <TextView
                        android:id="@+id/h1"
                        android:layout_width="match_parent"
                        android:text="@string/godzina"
                        android:padding="10px"/>

                    <TextView
                        android:id="@+id/t1"
                        android:layout_width="match_parent"
                        android:text="@string/temperatura"
                        android:padding="10px"/>

                    <TextView
                        android:id="@+id/w1"
                        android:layout_width="match_parent"
                        android:text="@string/wiatr"
                        android:padding="10px"/>

                </TableRow>
            </TableLayout>
        </ScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>